This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

19-Aug-2004 (Lars Duening)  (3.3.585)
  - (prolang.y, interpret.c, func_spec) Float variables without initializer
       are now properly initialized to float-0 instead of number-0 (reported
       by Bardioc).
  - (pkg-mccp.c) When ending a MCCP connection failed due to an error, the
       zlib datastructures weren't deallocated (Bug #0000111, fix by Alwin).

08-Aug-2004 (Lars Duening)  (3.3.584)
  - (simulate.c) When printing a load-object error with a long filename,
       the message is limited to the length of the error message buffer (Bug
       #0000109).
  - (simulate, xalloc.c) The length of the error message and error format
       buffer are now given by two macros, to facilitate easier adaptation
       of depending program segments.

01-Aug-2004 (Lars Duening)  (3.3.583)
  - (backend.c) If the garbage_collection() couldn't open a passed file,
       the filename was leaked (reported by xtian).
  - (mstrings.c) Corrected the statistics display for itabled strings.
  - (smalloc.c) The allocated small block statistics was confused by
       the mem_increment() feature.

29-Jul-2004 (Lars Duening)  (3.3.582)
  - (lex.c) The macros __FLOAT_MIN__ and __FLOAT_MAX__ now reflect
       the limits for 'double' floats (Bug #0000101).

28-Jul-2004 (Lars Duening)  (3.3.581)
  - (call_out.c) When printing the uid for an object with an error, make
       sure that there is an uid to print (reported by Bardioc).
  - (mudlib/crashleak.c) Donated by Menaures: a modification of the crasher
       object, looking for memory leaks (Bug #0000102).

25-Jul-2004 (Lars Duening)  (3.3.580)
  - (interpret.c) If the struct lookup operator receives arguments of
       the wrong type, it just throws an error instead of crashing the
       driver, as this can happen with careless funcall(#'->)s (Bug #0000097).