@@ -60,19 +60,19 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 585)
-(Parent-Version lpmud 3-3 584)
+(Project-Version lpmud 3-3 586)
+(Parent-Version lpmud 3-3 585)
 (Version-Log "
-  - (prolang.y, interpret.c, func_spec) Float variables without initializer
-       are now properly initialized to float-0 instead of number-0 (reported
-       by Bardioc).
-  - (pkg-mccp.c) When ending a MCCP connection failed due to an error, the
-       zlib datastructures weren't deallocated (Bug #0000111, fix by Alwin).
+  - (interpret.c) If a lambda was executed inside a catch() and threw an
+       error, the error routines didn't clean up the protective reference
+       held in current_lambda (Bug #0000114).
+  - (efuns.c) to_string(closure) leaked the closure (Bug #0000114).
+  - (ed.c) The 'M' command leaked the regular expression (Bug #0000114).
 ")
 (New-Version-Log 
 ""
 )
-(Checkin-Time "Thu, 19 Aug 2004 23:22:49 -0600")
+(Checkin-Time "Sat, 21 Aug 2004 23:12:04 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -110,7 +110,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.79 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.648 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.649 644))
   (HISTORY (lpmud/f/49_HISTORY 1.372 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -179,15 +179,15 @@
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.30 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.18 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.20 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.91 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.92 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.40 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
   (src/dumpstat.c (lpmud/c/34_dumpstat.c 1.20.1.11.1.8 644))
   (src/ed.h (lpmud/f/34_ed.h 1.5.1.6 644))
-  (src/ed.c (lpmud/c/33_ed.c 1.32.1.31 644))
+  (src/ed.c (lpmud/c/33_ed.c 1.32.1.32 644))
   (src/efuns.h (lpmud/l/20_efuns.h 1.13.1.19.1.6 644))
-  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.96 644))
+  (src/efuns.c (lpmud/l/21_efuns.c 1.42.1.47.1.97 644))
   (src/exec.h (lpmud/c/32_exec.h 1.34.1.33.1.7 644))
   (src/files.h (lpmud/i/49_files.h 1.2 644))
   (src/files.c (lpmud/i/50_files.c 1.26 644))
@@ -200,7 +200,7 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.4 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.39 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.67 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.68 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.9 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.69 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.17 644))
@@ -317,7 +317,7 @@
   (src/pkg-alists.c (lpmud/l/38_pkg-alists 1.9 644))
   (src/pkg-alists.h (lpmud/l/39_pkg-alists 1.3 644))
   (src/pkg-mccp.h (lpmud/d/b/48_pkg-mccp.h 1.2 644))
-  (src/pkg-mccp.c (lpmud/d/b/49_pkg-mccp.c 1.8 644))
+  (src/pkg-mccp.c (lpmud/d/b/49_pkg-mccp.c 1.9 644))
   (src/pkg-mysql.c (lpmud/j/1_pkg-mysql. 1.21 644))
   (src/pkg-mysql.h (lpmud/j/2_pkg-mysql. 1.5 644))
   (src/pkg-odbc.h (lpmud/e/b/43_pkg-odbc.h 1.1 644))
