@@ -224,12 +224,11 @@ end_compress (interactive_t * ip, Bool force)
 
 {
     unsigned char dummy[1];
-    Bool retval;
+    Bool retval = MY_TRUE;
     
     if (!ip->out_compress)
         return MY_TRUE;
    
-    retval = MY_TRUE;
     ip->out_compress->avail_in = 0;
     ip->out_compress->next_in = dummy;
     
@@ -243,6 +242,9 @@ end_compress (interactive_t * ip, Bool force)
         printf("%s MCCP-DEBUG: '%s' mccp had error while ending\n"
               , time_stamp(), ip->ob->name);
         retval = MY_FALSE;
+        /* This is a write error - no sense in trying it again, so
+         * get rid of all the buffers anyway.
+         */
     }
      
     /* reset compression values */
